test_files/invalid/026-self-as-native-function-name.man
def native self(x)

def main()
end
